--- a/views/partials/newpostform.handlebars
+++ b/views/partials/newpostform.handlebars
@@ -29,16 +29,17 @@
       </div>
     </div>
     <div id="bottomPostControlsRow" class="form-row mt-2 post-controls">
+      {{! Hide this div in communities}}
+      {{#unless isMember}}
       <div class="leftSideControls">
-        {{#unless isMember}}
-          <div class="switch-field" id="visibilityControls">
-        		<input type="radio" id="postPrivacy-public" name="postPrivacy" value="public" checked/>
-        		<label for="postPrivacy-public"><i class='fas fa-eye'></i> Everyone</label>
-        		<input type="radio" id="postPrivacy-private" name="postPrivacy" value="private" />
-        		<label for="postPrivacy-private"><i class='fas fa-eye-slash'></i> Trusted only</label>
-        	</div>
-        {{/unless}}
+        <div class="switch-field" id="visibilityControls">
+      		<input type="radio" id="postPrivacy-public" name="postPrivacy" value="public" checked/>
+      		<label for="postPrivacy-public"><i class='fas fa-eye'></i> Everyone</label>
+      		<input type="radio" id="postPrivacy-private" name="postPrivacy" value="private" />
+      		<label for="postPrivacy-private"><i class='fas fa-eye-slash'></i> Trusted only</label>
+      	</div>
       </div>
+      {{/unless}}
       <div class="rightSideControls">
         <button type="button" class="btn btn-primary btn-fade" id="postImageButton"><i class="fas fa-image"></i></button>
         <button type="button" class="btn btn-primary btn-fade" id="emojiWindowButton"><i class="far fa-smile"></i></button>
