Updated the index page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,6 @@
 <div class="container">
   <hgroup>
+    <img src="/icons/sweet_bee_logo.svg" id="sweetIndexLogo" alt="sweet logo"/>
     <h2 class="mb-2">welcome to sweet</h2>
     <h5 class="mb-4">(currently home to {{userCount}} little donuts).</h5>
   </hgroup>
@@ -25,7 +26,7 @@
 
   <h5><i class="fas fa-bug"></i> sweet is quite buggy!</h5>
   <p>
-    you are very welcome to use sweet, but please be aware that while we're in alpha, there will be plenty of bugs and things will behave strangely. it will be a huge help if you let me know about these, either on my <a href="/lowercasename">sweet profile</a> or on <a href="http://twitter.com/lowercasename">twitter</a>. we do our best to safeguard your data, but while we're in alpha, please do not post anything on sweet you're not willing to suddenly lose!
+    you are very welcome to use sweet, but please be aware that while we're in alpha, there will be plenty of bugs and things will behave strangely. it will be a huge help if you let me know about these, either on my <a href="/lowercasename">sweet profile</a>, my <a href="http://twitter.com/lowercasename">twitter</a>, or the <a href="https://github.com/lowercasename/sweet">sweet github repository</a>. we do our best to safeguard your data, but while we're in alpha, please do not post anything on sweet you're not willing to suddenly lose!
   </p>
 
   <p>
