--- a/public/css/style.css
+++ b/public/css/style.css
@@ -318,6 +318,16 @@ hr {
   top: 2px;
 }
 
+#sweetIndexLogo {
+  display: inline;
+  float: left;
+  width: 65px;
+  height: 65px;
+  position: relative;
+  top: 7px;
+  margin-right: 1rem;
+}
+
 #navbarProfileImage {
   width: 30px;
   height: 30px;
