Final navbar tweaks

--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -19,13 +19,13 @@
       </li>
     {{else}}
       <li class="nav-item">
-        <a class="nav-link" href="/login"><i class="fas fa-sign-in-alt"></i><span class="nav-link-text">log in</span></a>
+        <a class="nav-link" href="/login"><i class="fas fa-sign-in-alt"></i><span class="nav-link-text not-hidden">log in</span></a>
       </li>
       <a href="/" id="sweetLogoLink">
         <img src="/icons/sweet_bee_logo.svg" id="sweetLogo" alt="sweet logo"/>
       </a>
       <li class="nav-item">
-        <a class="nav-link" href="/signup"><i class="fas fa-birthday-cake"></i> <span class="nav-link-text">sign up</span></a>
+        <a class="nav-link" href="/signup"><i class="fas fa-birthday-cake"></i> <span class="nav-link-text not-hidden">sign up</span></a>
       </li>
     {{/if}}
   </ul>
@@ -73,13 +73,13 @@
       </div>
     {{else}}
       <li class="nav-item">
-        <a class="nav-link" href="/login"><i class="fas fa-sign-in-alt"></i> <span class="nav-link-text">log in</span></a>
+        <a class="nav-link" href="/login"><i class="fas fa-sign-in-alt"></i> <span class="nav-link-text not-hidden">log in</span></a>
       </li>
       <a href="/" id="sweetLogoLink">
         <img src="/icons/sweet_bee_logo.svg" id="sweetLogo" alt="sweet logo"/>
       </a>
       <li class="nav-item">
-        <a class="nav-link" href="/signup"><i class="fas fa-birthday-cake"></i> <span class="nav-link-text">sign up</span></a>
+        <a class="nav-link" href="/signup"><i class="fas fa-birthday-cake"></i> <span class="nav-link-text not-hidden">sign up</span></a>
       </li>
     {{/if}}
   </ul>
