Expanded emoji list

--- a/views/partials/emojilist.handlebars
+++ b/views/partials/emojilist.handlebars
@@ -1,20 +1,42 @@
-<!-- <div class="emoji">Click to add:</div> -->
-<div class="emoji">🍭</div>
 <div class="emoji">🍬</div>
-<div class="emoji">👍</div>
-<div class="emoji">👎</div>
-<div class="emoji">😀</div>
-<div class="emoji">😎</div>
-<div class="emoji">😍</div>
-<div class="emoji">🤨</div>
-<div class="emoji">😑</div>
-<div class="emoji">😶</div>
+<div class="emoji">🍭</div>
+<div class="emoji">🍡</div>
+<div class="emoji">🍩</div>
+<div class="emoji">🍪</div>
+<div class="emoji">🍫</div>
+<div class="emoji">🎂</div>
+<div class="emoji">🍯</div>
+<div class="emoji">🍎</div>
+<div class="emoji">🍑</div>
+<div class="emoji">🍌</div>
+<div class="emoji">🍓</div>
+<div class="emoji">🍇</div>
+<div class="emoji">🍉</div>
+<div class="emoji">🐝</div>
+<div class="emoji">😊</div>
 <div class="emoji">🙃</div>
-<div class="emoji">👻</div>
-<div class="emoji">🐶</div>
-<div class="emoji">🐱</div>
+<div class="emoji">😍</div>
+<div class="emoji">😂</div>
+<div class="emoji">😭</div>
+<div class="emoji">😬</div>
+<div class="emoji">😆</div>
+<div class="emoji">😩</div>
+<div class="emoji">😩</div>
+<div class="emoji">😱</div>
+<div class="emoji">😒</div>
+<div class="emoji">🖖</div>
+<div class="emoji">🙌</div>
+<div class="emoji">👏</div>
+<div class="emoji">👌</div>
+<div class="emoji">💪</div>
+<div class="emoji">🤦</div>
+<div class="emoji">🌱</div>
 <div class="emoji">🌞</div>
 <div class="emoji">🌝</div>
 <div class="emoji">❤️</div>
+<div class="emoji">💕</div>
+<div class="emoji">💖</div>
+<div class="emoji">🔥</div>
+<div class="emoji">🎉</div>
 <div class="emoji">💯</div>
 <div class="emoji">🏳️‍🌈</div>
