--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -1,12 +1,13 @@
 <div id="homeBody" class="row justify-content-center">
   <div class="col-lg-8">
     <h3 id="searchTitle" class="page-header mx-2">{{#if query}}{{#eq query ""}}Search{{else}}Search: {{query}}{{/eq}}{{else}}Search{{/if}}</h3>
-    <form class="form-inline mb-3" id="searchForm">
-      <input id="searchQuery" style="flex:1" type="text" class="form-control mr-2" placeholder="Search for users, communities, and tags."/>
-      <button type="submit" class="btn btn-secondary">Search</button>
-    </form>
-		<div class="container" id="resultsContainer">
-		</div>
+    <div id="searchHeader">
+      <form class="form-inline mb-3" id="searchForm">
+        <input id="searchQuery" style="flex:1" type="text" class="form-control mr-2" placeholder="Search for users, communities, and tags."/>
+        <button type="submit" class="btn btn-secondary">Search</button>
+      </form>
+    </div>
+		<div class="container" id="resultsContainer"></div>
     <div class="page-load-status">
       <div class="loader-ellips infinite-scroll-request">
         <span class="loader-ellips__dot"></span>
@@ -17,7 +18,6 @@
       <p class="infinite-scroll-last">No more results.</p>
       <p class="infinite-scroll-error">No more results.</p>
     </div>
-
   </div>
 </div>
 
