--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,24 @@
+/* Fonts */
+
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono:300,400,500,700|Ubuntu:300,300i,400,400i,500,500i,700,700i|Inconsolata:400,700');
 
-/*colors*/
+@font-face {
+    font-family: 'OpenDyslexic3';
+    src: url('/fonts/OpenDyslexicThree-Bold.woff2') format('woff2'),
+        url('/fonts/OpenDyslexicThree-Bold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'OpenDyslexic3';
+    src: url('/fonts/OpenDyslexicThree-Regular.woff2') format('woff2'),
+        url('/fonts/OpenDyslexicThree-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+/* Colors */
 
 body {
   color: #1a1717;
