--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -22,7 +22,7 @@
         <a class="nav-link" href="/login"><i class="fas fa-sign-in-alt"></i><span class="nav-link-text not-hidden">log in</span></a>
       </li>
       <a href="/" id="sweetLogoLink">
-        <img src="/icons/sweet_bee_logo.svg" id="sweetLogo" alt="sweet logo"/>
+        <img src="/icons/bee.svg" id="sweetLogo" alt="sweet logo"/>
       </a>
       <li class="nav-item">
         <a class="nav-link" href="/signup"><i class="fas fa-birthday-cake"></i> <span class="nav-link-text not-hidden">sign up</span></a>
@@ -51,7 +51,7 @@
       </div>
       <div class="navbar-group" id="navbarCentreGroup">
         <a href="/" id="sweetLogoLink">
-          <img src="/icons/sweet_bee_logo.svg" id="sweetLogo" alt="sweet logo"/>
+          <img src="/icons/bee.svg" id="sweetLogo" alt="sweet logo"/>
         </a>
       </div>
       <div class="navbar-group" id="navbarRightGroup">
@@ -60,10 +60,11 @@
             <img alt="Profile image for the user @{{ loggedInUserData.username}}" id="navbarProfileImage" src="{{#if loggedInUserData.imageEnabled}}/images/{{loggedInUserData.image}}{{else}}/images/cake.svg{{/if}}" {{#eq activePage loggedInUserData.username}}class="active"{{/eq}}/> <span class="navbar-username">@{{loggedInUserData.username}}</span>
           </a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown" id="userDropdownMenu">
-            <a class="dropdown-item" href="/{{loggedInUserData.username}}"><i class="fas fa-user-circle"></i> profile</a>
-            <a class="dropdown-item" href="/settings"><i class="fas fa-cog"></i> settings</a>
+            <a class="dropdown-item" href="/{{loggedInUserData.username}}"><i class="fas fa-fw fa-user-circle"></i> profile</a>
+            <a class="dropdown-item" href="/settings"><i class="fas fa-fw fa-cog"></i> settings</a>
+            <!-- <a id="darkModeToggle" class="dropdown-item" href="#"><i class="fas fa-fw fa-moon"></i> dark mode</a> -->
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="/logout"><i class="fas fa-sign-out-alt"></i> log out</a>
+            <a class="dropdown-item" href="/logout"><i class="fas fa-fw fa-sign-out-alt"></i> log out</a>
           </div>
         </li>
         <li class="nav-item">
@@ -76,7 +77,7 @@
         <a class="nav-link" href="/login"><i class="fas fa-sign-in-alt"></i> <span class="nav-link-text not-hidden">log in</span></a>
       </li>
       <a href="/" id="sweetLogoLink">
-        <img src="/icons/sweet_bee_logo.svg" id="sweetLogo" alt="sweet logo"/>
+        <img src="/icons/bee.svg" id="sweetLogo" alt="sweet logo"/>
       </a>
       <li class="nav-item">
         <a class="nav-link" href="/signup"><i class="fas fa-birthday-cake"></i> <span class="nav-link-text not-hidden">sign up</span></a>
