Updated index page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
 <div class="container">
   <hgroup>
-    <img src="/icons/sweet_bee_logo.svg" id="sweetIndexLogo" alt="sweet logo"/>
+    <img src="/icons/bee.svg" id="sweetIndexLogo" alt="sweet logo"/>
     <h2 class="mb-2">welcome to sweet</h2>
     <h5 class="mb-4">(currently home to {{userCount}} little donuts).</h5>
   </hgroup>
