--- a/views/community.handlebars
+++ b/views/community.handlebars
@@ -284,8 +284,8 @@ $('#postsContainer').infiniteScroll({
   status: '.page-load-status'
 });
 $('#postsContainer').on( 'append.infiniteScroll', function( event, response, path, items ) {
-  autosize($('.comment-textarea'));
-  tribute.attach($(".comment-textarea"));
+  tribute.attach($(".editable-text"));
+  editor.addElements('.editable-text');
 });
 
 {{#if loggedIn}}
