--- a/views/singlepost.handlebars
+++ b/views/singlepost.handlebars
@@ -223,7 +223,7 @@ $(function() {
         return '<img class="tribute-image" src="/images/'+item.original.image + '">' + item.string;
       }
     })
-    tribute.attach($("textarea"));
+    tribute.attach($(".editable-text"));
   })
 });
 </script>
