--- a/views/partials/uploadscripts.handlebars
+++ b/views/partials/uploadscripts.handlebars
@@ -44,6 +44,7 @@ $(function() {
     $("#postContent").prop('required',true);
     $(".image-preview")[0].style.backgroundImage = "url(/images/imagePreviewWindowDefault.jpg)";
     $(".file-input").val(null);
+    $(".image-clear").off();
   }
 
   $(".file-input").change(function (e) {
